# my-sel4-projects

./: .gitignore  README.md  init-board.tcl  init-boardhw.tcl  read-bram.tcl
accProfPass/: AccProf.cpp  AccProf.h  CMakeLists.txt  README.md  event-list.md  events.txt  functions.txt
attprof/: CMakeLists.txt  attprof.cpp  attprof.hpp  prof-func-list.md
dummyApps/: README.md  pointer-function.c  return-call.c
evaluation/: README.md
evaluation/accprof/: README.md
evaluation/accprof/embench/: README.md
evaluation/accprof/embench/all-in-one/: embench-hw-run92-cpu1_2.csv  embench-hw-run92-cpu1_all.csv  embench-hw-run92-cpu2_1.csv  embench-hw-run92-cpu2_2.csv  embench-hw-run92-cpu2_3.csv  embench-hw-run92-cpu2_all.csv  embench-hw-run92-cpu3_1.csv  (+8 more)
evaluation/accprof/stream/: README.md  stream-hw-arr100k-500t_1.csv  stream-hw-arr100k-500t_2.csv  stream-hw-arr100k-500t_all.csv  stream-hw-arr10k-500t_3.csv  stream-hw-arr1k-500t_1.csv  stream-hw-arr1k-500t_2.csv  stream-hw-arr1k-500t_3.csv  stream-hw-arr1k-500t_all.csv  stream-sw-arr100k-500t_all.csv  stream-sw-arr10k-500t_1.csv  stream-sw-arr10k-500t_2.csv  stream-sw-arr1k-500t_all.csv
evaluation/embench-synth/: embench-cycle-count.csv  embench-hw-run92-cpu1_1.csv  embench-hw-run92-cpu1_2.csv  embench-hw-run92-cpu1_3.csv  embench-hw-run92-cpu1_all.csv  embench-hw-run92-cpu2_1.csv  embench-hw-run92-cpu2_2.csv  embench-hw-run92-cpu2_3.csv  embench-hw-run92-cpu2_all.csv  embench-hw-run92-cpu3_1.csv  embench-hw-run92-cpu3_2.csv  embench-hw-run92-cpu3_3.csv  embench-hw-run92-cpu3_all.csv  embench-sw-run92-cpu1_1.csv  embench-sw-run92-cpu1_2.csv  embench-sw-run92-cpu1_3.csv  embench-sw-run92-cpu1_all.csv  embench-sw-run92-cpu2_1.csv  embench-sw-run92-cpu2_2.csv  embench-sw-run92-cpu2_3.csv  embench-sw-run92-cpu2_all.csv  embench-sw-run92-cpu3_1.csv  embench-sw-run92-cpu3_2.csv  embench-sw-run92-cpu3_3.csv  embench-sw-run92-cpu3_all.csv
evaluation/embench/all-in-one/: embench-cycle-count.csv  embench-hw-run92-cpu1_1.csv  embench-hw-run92-cpu1_3.csv  embench-hw-run92-cpu3_2.csv  embench-hw-run92-cpu3_all.csv  embench-sw-run92-cpu1_1.csv  embench-sw-run92-cpu1_all.csv  embench-sw-run92-cpu2_1.csv  embench-sw-run92-cpu2_all.csv  embench-sw-run92-cpu3_2.csv
evaluation/stream/: stream-hw-arr100k-500t_3.csv  stream-hw-arr10k-500t_1.csv  stream-hw-arr10k-500t_2.csv  stream-hw-arr10k-500t_all.csv  stream-sw-arr100k-500t_1.csv  stream-sw-arr100k-500t_2.csv  stream-sw-arr100k-500t_3.csv  stream-sw-arr10k-500t_3.csv  stream-sw-arr10k-500t_all.csv  stream-sw-arr1k-500t_1.csv  stream-sw-arr1k-500t_2.csv  stream-sw-arr1k-500t_3.csv
evaluation/stream-synth/: stream-cycle-count.csv  stream-hw-arr100k-285t_all.csv  stream-hw-arr10k-285t_2.csv  stream-hw-arr10k-285t_3.csv  stream-hw-arr10k-285t_all.csv  stream-hw-arr1k-285t_1.csv  stream-hw-arr1k-285t_3.csv  stream-hw-arr1k-285t_all.csv  stream-sw-arr100k-285t_1.csv  stream-sw-arr100k-285t_2.csv  stream-sw-arr100k-285t_all.csv  stream-sw-arr10k-285t_2.csv  stream-sw-arr10k-285t_3.csv  stream-sw-arr10k-285t_all.csv  stream-sw-arr1k-285t_1.csv  stream-sw-arr1k-285t_all.csv
key-generator/: generate-keys.py
myLlvmPass/: InjectBRAM.cpp  InjectBRAM.cpp.opt  InjectBRAM.h  README.md  app.c  gfc.c  gfcmod.c  prof-func-list.md
patches/: README.md
patches/kernel/: gcc.cmake.patch  llvm.cmake.patch
patches/projects/seL4_libs/: private.h.patch  sel4bench.h.armv8.patch  sel4bench.h.gen.patch
patches/tools/cmake-tool/: init-build.sh.patch
profileAttestPass/: CMakeLists.txt  functions.txt
profilePass/: CMakeLists.txt  InjectBRAM.cpp  Profile.cpp  README.md
projects/accprof_soft/: CMakeLists.txt  Findaccprof_soft.cmake  README.md
projects/accprof_soft/include/: accprof_soft.h
projects/accprof_soft/src/: accprof_soft.c
projects/attester_sw/: CMakeLists.txt  Findattester_sw.cmake
projects/attester_sw/include/: attester_sw.h
projects/attester_sw/src/: attester_sw.c
projects/embench/: CMakeLists.txt  README.md
projects/embench/src/aha-mont64/: mont64.c
projects/embench/src/crc32/: crc_32.c
projects/embench/src/cubic/: basicmath_small.c
projects/embench/src/edn/: libedn.c
projects/embench/src/huffbench/: libhuffbench.c
projects/embench/src/matmult-int/: matmult-int.c
projects/embench/src/md5sum/: md5.c
projects/embench/src/minver/: libminver.c
projects/embench/src/nbody/: nbody.c
projects/embench/src/nettle-aes/: nettle-aes.c
projects/embench/src/nettle-sha256/: nettle-sha256.c
projects/embench/src/nsichneu/: libnsichneu.c
projects/embench/src/picojpeg/: picojpeg_test.c
projects/embench/src/primecount/: primecount.c
projects/embench/src/qrduino/: qrtest.c
projects/embench/src/sglib-combined/: combined.c
projects/embench/src/slre/: libslre.c
projects/embench/src/st/: libst.c
projects/embench/src/statemate/: libstatemate.c
projects/embench/src/tarfind/: tarfind.c
projects/embench/src/ud/: libud.c
projects/embench/src/wikisort/: libwikisort.c
projects/embench/support/: main.c  support.h
projects/hello/: CMakeLists.txt  README.md  settings.cmake
projects/mapping/: CMakeLists.txt  README.md
projects/mapping/src/: main.c
projects/sha256/: CMakeLists.txt  Findsha256.cmake  README.md
projects/sha256/include/: keygen.h  sha256.h
projects/sha256/src/: keygen.c  sha256.c
projects/stream/: CMakeLists.txt  README.md
projects/stream-synth/: CMakeLists.txt  README.md
projects/stream-synth/src/: main.c
projects/stream/src/: app.c  main.c
projects/vkamapping/: CMakeLists.txt  README.md  build-steps.md
projects/vkamapping/src/: app.c  main.c
scripts/: README.md  bytes-to-mwr-words.sh  cg-data-to-csv.sh  compile-sel4.sh  extract-functions.sh  generate-keys.py  id-to-name-csv.sh  init-board.tcl  init-boardhw.tcl  llvmpass-compile.sh  merge-csv.sh  mwrs.tcl  pass-compile.sh  pass.sh  process-profile-data.sh  profile-n-attest.sh  program-dev.tcl  read-bram.tcl  run-attest.sh  run-profile.sh  sel4-compile.sh  test-hw.sh  trigger-hls-read-bram.tcl
vitis_hls/: README.md  attester.cpp  attester_types.h  function_counter.cpp  stack.cpp  stack.h
(+24 files in other folders)
